# services/express-starter/src/libs/chartify/types.ts
@@ -1,0 +1,14 @@
+export type ScaleOptions = {
+  minValue?: number;
+  maxValue?: number;
+};
+
+export type SizeOptions = {
+  width?: number;
+  height?: number;
+};
+
+export type StrokeOptions = {
+  strokeColor?: string;
+  strokeWidth?: number;
+};
